--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==1.0.2
+Flask==1.1.1
 gunicorn==19.9.0
-flask-pymongo==2.2.0
+flask-pymongo==2.3.0
 dnspython==1.16.0
+pymongo==3.10.0
+requests==2.22.0
